hledger/test/errors/parseable.j
#!/usr/bin/env -S hledger check -f

1
